# OpenGL_Pattern

./: CMakeLists.txt
glad/: glad.c
include/: emuns.h  object.h  scene.h  shader.h
include/glad/: glad.h
shaders/: standart.fs  standart.vs
src/: main.cpp  object.cpp  scene.cpp  shader.cpp
